<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_msg">Message</string>
    <string name="menu_me">Me</string>
    <string name="next_step">NEXT</string>
    <string name="create_wallet_normal_btn">Create the wallet</string>
    <string name="mnemonic_restore_title">Restore Mnemonic</string>
    <string name="mnemonic_restore_me_title">Restore Mnemonic</string>
    <string name="me_wallet_detail_name_title">Wallet name</string>
    <string name="pwd_setup_title">Set up a password</string>
    <string name="PWD_WARNING1">Password strength is critical to safeguard your wallet</string>
    <string name="PWD_WARNING2">We don\'t save your password therefore we can\'t recover your password, please make sure don\'t forget it.</string>
    <string name="pwd_confirm_hint">Please re-confirm your password</string>
    <string name="pwd_strength_weak">Weak</string>
    <string name="pwd_strength_general">Medium</string>
    <string name="pwd_strength_strong">Strong</string>
    <string name="pwd_confirm_err">Passwords are not match, please re-enter</string>
    <string name="pwd_strength_warning">Password is too week, easily get hacked</string>
    <string name="pwd_length_error">At least 8 characters, suggesting a mix of letters, digits, and special symbols</string>
    <string name="agree">AGREE</string>
    <string name="setting_wallet_tools_backupmem">Backup Mnemonic</string>
    <string name="new_mnemonic_sub_title">Last step: Backup your mnemonic now</string>
    <string name="new_mnemonic_msg">You can only use these mnemonic to restore your wallet! Your assets cannot be recovered if the mnemonic are lost! Your assets may be stolen if the mnemonic are leaked! </string>
    <string name="confirm_backup">Backup Complete</string>
    <string name="new_mnemonic_verify_title">Verify Mnemonic</string>
    <string name="new_mnemonic_verify_msg">Please make sure your mnemonic was written correctly,  then type in the words in its order to verify the one you wrote down is correct.</string>
    <string name="new_mnemonic_verified">Verification Complete</string>
    <string name="mnemonic_verify_failed">The order is not right, please check and try it again</string>
    <string name="mnemonic_verify_success_title">Mnnemonic is verified </string>
    <string name="mnemonic_remove_msg">Your mnemonic is correct. For your own safety, we suggest you delete the mnemonic from your device</string>
    <string name="mnemonic_remove_ignore">Keep it for now</string>
    <string name="mnemonic_remove_btn">Delete Mnemonic</string>
    <string name="mnemonic_restore_msg">Your wallet\'s mnemonic</string>
    <string name="mnemonic_resotre_btn">Restore your wallet</string>
    <string name="mnemonic_resotre_remove_btn">Restore wallet and delete the mnemonic</string>
    <string name="mnemonic_devicename_title">Welcome to TrustNote</string>
    <string name="mnemonic_devicename_msg">You can define the name of your device so your friends can easily find you from the chatting list after adding you as friend.</string>
    <string name="mnemonic_devicename_hint">Please enter the device name</string>
    <string name="mnemonic_devicename_err">No more than 20 characters</string>
    <string name="dialog_backup_mnemonic_copy">Please never take a screenshot of the mnemonic. Write it down carefully instead!</string>
    <string name="dialog_remove_mnemonic_ask">Are you sure you want to delete the mnemonic?</string>
    <string name="pwd_exist_input_pwd">Please enter the password</string>
    <string name="tx_list_title">Recent transaction records</string>
    <string name="action_scan">Scan QR Code</string>
    <string name="contacts_add_title">Add Contacts</string>
    <string name="mypairid_title">My Matching Code</string>
    <string name="create_ttt_wallet">Create TrustNote wallet</string>
    <string name="create_wallet_tab_title_normal">Regular wallet</string>
    <string name="create_wallet_tab_title_observe">Watch-Only wallet</string>
    <string name="me_wallet_detail_label_cold_code">Cold wallet authentication code</string>
    <string name="create_wallet_normal_hint">Enter the name of your new TrustNote wallet</string>
    <string name="MNEMONIC_BACKUP_WARNING1">Write it down or save it in an offline device</string>
    <string name="contacts_empty_msg">Select \"+\" in top right of the screen to add new contact</string>
    <string name="mypairid_title_info">Use other device to scan the QT code below, or send the QR code to other devices, add me as friends</string>
    <string name="mypairid_copy_btn">Copy Device Code</string>
    <string name="contacts_add_pair_code_label">Device Code</string>
    <string name="contacts_add_btn">Add</string>
    <string name="contacts_add_pairid_format_err">Incorrect code, please check and try it again</string>
    <string name="contacts_add_err_cannot_add_myself">you can’t add your self ad friend</string>
    <string name="setting_wallet_tools">Wallet tools</string>
    <string name="setting_system">Settings</string>
    <string name="setting_about">About TrustNote</string>
    <string name="setting_about_version">Version</string>
    <string name="setting_about_hash">Hash Value</string>
    <string name="setting_about_tou">TERMS OF USE</string>
    <string name="setting_system_language">Language</string>
    <string name="setting_wallet_tools_restoremem">Restore from the mnemonic</string>
    <string name="me_clone_sync_title">Sync Cloned Wallets</string>
    <string name="wallet_transfer_btn">Send</string>
    <string name="wallet_receive_btn">Receive</string>
    <string name="transfer_amount_hint">Amount</string>
    <string name="transfer_notes_hint">Notes</string>
    <string name="transfer_receiver_err">Invalid address, please check and try it again</string>
    <string name="transfer_transfer_all">Send all</string>
    <string name="receive_title">My receiving address</string>
    <string name="receive_setup_amount">Fixed amount</string>
    <string name="receive_btn_copy">Copy the receiving address</string>
    <string name="me_header_welcome">Welcome to the TrustNote World</string>
    <string name="me_wallet_manager">Manage wallet</string>
    <string name="me_wallet_detail_id_title">Wallet ID</string>
    <string name="me_wallet_detail_remove_btn">Delete wallet</string>
    <string name="me_wallet_cold_code_sucessful_title">Signing succeed</string>
    <string name="me_wallet_cold_code_sucessful_msg">To complete the authoization process, use the watch-only wallet to scan the signature QR code</string>
    <string name="toolbar_edit_done">Complete</string>
    <string name="me_wallet_remove_wallet_msg">Permanently delete the wallet. If you want to restore the wallet, you must use your mnemonic</string>
    <string name="me_wallet_remove_wallet_deny">The wallet can’t be deleted beause it contains assets</string>
    <string name="msg_friend_memo">No more than 10 characters</string>
    <string name="me_backup_hide">Hide the mnemonic</string>
    <string name="me_backup_show">Show the mnemonic</string>
    <string name="me_restore_warning">Please make sure your mnemonic is backuped already. When restore the wallet with another mnemonic, the existing wallet will be removed from the device!</string>
    <string name="me_clone_sync_btn">Sync Wallets</string>
    <string name="FULLSYNC_WARNING1">We don\'t recommend cloning your wallet because your wallet is safe as long as your mnemonic is well protected. However,if you experience data inconsistency issue between the original wallet and its clone,you can fix it by using the\"Sync Cloned Wallets\"feature on both wallets.</string>
    <string name="me_change_pwd_old_pwd_hint">Please enter your old password</string>
    <string name="tx_confirmed">Confirmed</string>
    <string name="tx_unconfirmed">Unconfirmed</string>
    <string name="address_book_title">Address</string>
    <string name="address_book_label_memo">Remarks</string>
    <string name="address_book_label_address">Wallet address</string>
    <string name="title_edit_friend_memo">Set Alias</string>
    <string name="hint_edit_friend_memo">Alias</string>
    <string name="ic_remove_msg_contact">Delete Contact</string>
    <string name="ic_clear_chat_history">Clear Chat History</string>
    <string name="ttt_transfer_title">Send TTT</string>
    <string name="place_holder">TestTTT</string>
    <string name="place_holder_address">ZKWUHD6P3CRLTX64TGPIDQ7U4PM7R7AI232342354254252</string>
    <string name="place_holder_number">8</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="ttt_slogan">Trust  ·  Token  ·  Things</string>
    <string name="wallet_toolbar_title">WALLET</string>
    <string name="tx_sender">Sender</string>
    <string name="tx_receiver">Receiver</string>
    <string name="tx_fee">Fee</string>
    <string name="default_first_msg_for_friend">You have added %1$s as friend, now you can start to chat</string>
    <string name="time_format_yesterday">Yesterday</string>
    <string name="msg_for_remove_contacts">Delete the contact person "%1$s" and delete the chat record with the contact</string>
    <string name="transfer_balance_title">Remaining balance（MN)</string>
    <string name="tx_date">Date</string>
    <string name="tx_unit_id">Unit</string>
    <string name="tx_status">Status</string>
    <string name="backup_mnemonic_sub_title">Backup your 12 words mnemonic now!</string>
    <string name="pwd_hint">Please enter your password</string>
    <string name="dialog_backup_mnemonic_ask">Are you sure you saved mnemonic?</string>
    <string name="wallet_amount_subtitle">Total Assets (MN)</string>
    <string name="wallet_amount_subtitle_manager">Assets (MN)</string>
    <string name="tx_detial_receive_title">Received(MN）</string>
    <string name="wallet_new_hint">Enter the name of your new TrustNote wallet</string>
    <string name="wallet_new_btn">Create TrustNote Wallet</string>
    <string name="MNEMONIC_BACKUP_WARNING2">Restore your wallet immediately after creating your wallet, to ensure the mnemonic is
    <string name="receive_clear_amount">Clear the amount(MN)</string>
    <string name="transfer_receiver_hint">Receiver\'s wallet address</string>
    <string name="wallet_transfer_sign_scan_btn">Sending transaction</string>
    <string name="wallet_transfer_sign_scan_invalid">Invalid signature</string>
    <string name="tx_invalid">Invalid</string>
    <string name="address_book_add_title">Address</string>
    <string name="pwd_exist_input_err">Invalid password, please input again</string>
    <string name="create_wallet_observer_msg">观察钱包需要导入冷钱包认证码，用来日常查看账户、交易。大额资金的钱包建议使用冷钱包管理，避免泄露被盗。</string>
    <string name="create_wallet_observer_scancode_hint">扫描冷钱包认证码</string>
    <string name="create_wallet_observer_startbtn">开始导入</string>
    <string name="create_wallet_observer_howsign">如何使用冷钱包进行离线签名？</string>
    <string name="create_wallet_observer_err">无效的认证码</string>
    <string name="create_wallet_observer_qr_finish_btn">完成授权</string>
    <string name="create_wallet_observer_qr_finish_msg">扫描授权钱包页面的二维码，导入签名</string>
    <string name="create_wallet_observer_qr_finish_import">导入签名</string>
    <string name="create_wallet_observer_qr_finish_title">完成授权</string>
    <string name="new_mnemonic_title">Backup Mnemonic</string>
    <string name="action_contacts_add">Add Contacts</string>
    <string name="action_create_wallet">Create the wallet</string>
    <string name="action_my_pair_id">My Matching Code</string>
    <string name="create_wallet_observer_scancode">Cold wallet authentication code</string>
    <string name="wallet_name_err">No more than 10 characters</string>
    <string name="ic_edit_contacts_memo">Set Alias</string>
</resources>