<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/quick_action"
        android:icon="@drawable/ic_quick_action_padding"
        android:title="@string/place_holder"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_scan"
                android:enabled="true"
                android:icon="@drawable/scan"
                android:title="@string/action_scan"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_contacts_add"
                android:enabled="true"
                android:icon="@drawable/contacts_add"
                android:title="@string/action_contacts_add"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_create_wallet"
                android:enabled="true"
                android:icon="@drawable/wallet_create"

                android:title="@string/action_create_wallet"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_my_pair_id"
                android:enabled="true"
                android:icon="@drawable/my_pair_code"
                android:title="@string/action_my_pair_id"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>