<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/t_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_mnemonic_title"
            style="@style/t_title"
            android:text="@string/new_mnemonic_title" />

        <TextView
            android:id="@+id/new_mnemonic_sub_title"
            style="@style/t_sub_title"
            android:layout_below="@id/new_mnemonic_title"
            android:text="@string/new_mnemonic_sub_title" />

        <TextView
            android:id="@+id/new_mnemonic_msg"
            style="@style/t_text_msg"
            android:layout_below="@id/new_mnemonic_sub_title"
            android:text="@string/new_mnemonic_msg" />



        <WebView
            android:id="@+id/pwd_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_mnemonic_msg" />


        <Button
            android:id="@+id/btn_new_seed"
            style="@style/t_btn_blue"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            android:text="@string/confirm_backup" />


    </RelativeLayout>

</layout>
