<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout style="@style/t_layout">

        <ImageView
            android:id="@+id/mnemonic_devicename_icon"
            android:layout_marginTop="@dimen/line_gap_20"
            android:layout_width="67dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_wallet" />

        <TextView
            android:id="@+id/mnemonic_devicename_title"
            style="@style/t_title"
            android:layout_below="@id/mnemonic_devicename_icon"
            android:layout_marginTop="@dimen/line_gap_40"
            android:text="@string/mnemonic_devicename_title" />

        <TextView
            android:id="@+id/mnemonic_devicename_msg"
            style="@style/t_text_msg"
            android:layout_below="@id/mnemonic_devicename_title"
            android:layout_marginTop="@dimen/line_gap_16"
            android:text="@string/mnemonic_devicename_msg" />

        <org.trustnote.wallet.widget.ClearableEditText
            android:id="@+id/mnemonic_devicename_edit_text"
            style="@style/t_pwd"
            android:textSize="@dimen/text_18"
            android:layout_below="@id/mnemonic_devicename_msg"
            android:hint="@string/mnemonic_devicename_hint"
            android:layout_marginTop="@dimen/line_gap_32"
            android:inputType="text"
            android:text="" />

        <org.trustnote.wallet.widget.ErrTextView
            android:id="@+id/mnemonic_devicename_err"
            style="@style/t_err"
            android:layout_below="@id/mnemonic_devicename_edit_text"
            android:text="@string/mnemonic_devicename_err" />

        <Button
            android:id="@+id/mnemonic_devicename_confirm"
            style="@style/t_btn_blue"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:text="@string/confirm" />
    </RelativeLayout>

</layout>
