<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_input_pwd">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bg_dialog_padding_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_wallet_observer_qr_finish_title"
            style="@style/t_title"
            android:text="@string/create_wallet_observer_qr_finish_title"
            android:textSize="@dimen/font_20" />

        <TextView
            android:id="@+id/create_wallet_observer_qr_finish_msg"
            style="@style/t_text_msg"
            android:layout_marginBottom="@dimen/line_gap_32"
            android:layout_marginTop="@dimen/line_gap_32"
            android:text="@string/create_wallet_observer_qr_finish_msg" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/create_wallet_observer_qr_finish_import"
                style="@style/t_sub_title"
                android:layout_alignParentLeft="true"
                android:text="@string/create_wallet_observer_qr_finish_import" />

            <ImageView
                android:id="@+id/create_wallet_observer_qr_finish_scan"
                android:layout_width="@dimen/quick_action_size"
                android:layout_height="@dimen/quick_action_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/scan" />

        </RelativeLayout>

        <org.trustnote.wallet.widget.ClearableEditText
            android:id="@+id/create_wallet_observer_qr_finish_scan_res"
            style="@style/t_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/create_wallet_observer_scancode_hint"
            android:inputType="text"
            android:scrollHorizontally="false"
            android:text="" />

        <org.trustnote.wallet.widget.ErrTextView
            android:id="@+id/create_wallet_observer_err"
            style="@style/t_err"
            android:text="@string/create_wallet_observer_err" />

        <Button
            android:id="@+id/create_wallet_observer_qr_finish_btn"
            style="@style/t_btn_blue"
            android:text="@string/create_wallet_observer_qr_finish_btn" />


    </LinearLayout>
</FrameLayout>
