<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_wallet_observer_msg"
            style="@style/t_text_msg"
            android:paddingTop="@dimen/line_gap_32"
            android:text="@string/create_wallet_observer_msg" />


        <TextView
            android:id="@+id/create_wallet_observer_scancode"
            style="@style/t_sub_title"
            android:layout_below="@id/create_wallet_observer_msg"
            android:paddingTop="@dimen/line_gap_32"
            android:text="@string/create_wallet_observer_scancode" />

        <ImageView
            android:id="@+id/create_wallet_observer_scan"
            android:layout_width="@dimen/quick_action_size"
            android:layout_height="@dimen/quick_action_size"
            android:layout_alignBottom="@id/create_wallet_observer_scancode"
            android:layout_alignParentRight="true"
            android:src="@drawable/scan" />

        <org.trustnote.wallet.widget.ClearableEditText
            android:id="@+id/create_wallet_observer_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            style="@style/t_pwd"
            android:scrollHorizontally="false"
            android:layout_below="@id/create_wallet_observer_scancode"
            android:hint="@string/create_wallet_observer_scancode_hint"
            android:inputType="text"
            android:text="" />

        <org.trustnote.wallet.widget.ErrTextView
            android:id="@+id/create_wallet_observer_err"
            style="@style/t_err"
            android:text="@string/create_wallet_observer_err" />

        <WebView
            android:id="@+id/create_wallet_observer_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/create_wallet_observer_startbtn" />

        <Button
            android:id="@+id/create_wallet_observer_startbtn"
            style="@style/t_btn_blue"
            android:layout_above="@id/create_wallet_observer_howsign"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            android:text="@string/create_wallet_observer_startbtn" />

        <TextView
            android:id="@+id/create_wallet_observer_howsign"
            style="@style/t_url"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/line_gap_22"
            android:text="@string/create_wallet_observer_howsign" />

    </RelativeLayout>
</layout>
