<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/t_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_mnemonic_verify_title"
            style="@style/t_title"
            android:text="@string/new_mnemonic_verify_title" />

        <TextView
            android:id="@+id/new_mnemonic_verify_msg"
            style="@style/t_text_msg"
            android:layout_below="@id/new_mnemonic_verify_title"
            android:text="@string/new_mnemonic_verify_msg" />


        <Button
            android:id="@+id/btn_new_seed"
            style="@style/t_btn_blue"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            android:text="@string/new_mnemonic_verified" />


    </RelativeLayout>

</layout>
