<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/t_layout"
        android:gravity="center">

        <ImageView
            android:layout_marginTop="@dimen/line_gap_20"
            android:id="@+id/mnemonic_remove_icon"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:scaleType="fitXY"
            android:src="@drawable/verify_success" />

        <TextView
            android:id="@+id/mnemonic_verify_success_title"
            style="@style/t_title"
            android:layout_below="@id/mnemonic_remove_icon"
            android:layout_marginTop="@dimen/line_gap_40"
            android:text="@string/mnemonic_verify_success_title" />

        <TextView
            android:id="@+id/mnemonic_remove_msg"
            style="@style/t_text_msg"
            android:layout_below="@id/mnemonic_verify_success_title"
            android:layout_marginTop="@dimen/line_gap_16"
            android:text="@string/mnemonic_remove_msg" />

        <Button
            android:id="@+id/mnemonic_remove"
            style="@style/t_btn_blue"
            android:layout_above="@id/mnemonic_remove_ignore"
            android:text="@string/mnemonic_remove_btn" />

        <Button
            android:id="@+id/mnemonic_remove_ignore"
            style="@style/t_btn_white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/btn_bottom_margin"
            android:layout_marginTop="@dimen/btn_gap_24"
            android:text="@string/mnemonic_remove_ignore" />
    </RelativeLayout>

</layout>
